# pdmake

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
example/: .pdcache  .pdmake.toml  pdmake.toml
example/.sentry-native/749551b2-38ca-4469-b91a-a608ad8ffbfa.run/: __sentry-event
example/source/: main.plua  playdate.aseprite
example/src/: main.plua
src/: build.rs  cache.rs  config.rs  exec.rs  main.rs  processors.rs
src/plua/: mod.rs  parser.rs  plua.pest  test.plua
