[package]
name = "pdmake"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
clap_derive = "4.5.32"
glob = "0.3.2"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
plua = "0.1.0"
stylua = { version = "2.0.2", features = ["lua54"] }
walkdir = "2.5.0"
log = "0.4.26"
simple_logger = "5.0.0"
